--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: '2.5'
 pkgdown: 2.0.6
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-11-14T15:45Z
+last_built: 2022-11-14T17:08Z
+urls:
+  reference: https://geobosh.github.io/FinTSDoc/reference
+  article: https://geobosh.github.io/FinTSDoc/articles
 
